# KeyloggerClient

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  RESEARCH_PURPOSE.md  config.enc  fix_openssl.sh  fix_other.sh  mingw-toolchain.cmake  requirements.txt
build_scripts/: build.bat  build.sh  install.bat  obfuscate.bat  setup.bat  sign.bat  uninstall.bat  windows-cross-compile.cmake
cmake/: FindCrypto.cmake  FindCustomDependencies.cmake  FindWindowsSDK.cmake
docs/: DEPLOYMENT.md  DETECTION_AVOIDANCE.md  RESEARCH_ETHICS.md
include/: obfuscate.h
include/communication/: BaseComms.h  CommsManager.h  DnsComms.h  FtpComms.h  HttpComms.h  HttpsComms.h  NetworkClient.h
include/core/: Application.h  Configuration.h  Logger.h  Platform.h
include/data/: BatchData.h  DataManager.h  DataProcessor.h  KeyData.h  Screenshot.h  SystemData.h  Windows.h
include/hooks/: KeyHook.h  KeyboardHook.h  MouseHook.h  SystemHook.h
include/persistence/: BasePersistence.h  PersistenceManager.h  RegistryPersistence.h  SchedulePersistence.h  ServicePersistence.h
include/security/: AntiAnalysis.h  Encryption.h  Obfuscation.h  PrivilegeEscalation.h  StealthComms.h
include/utils/: DataUtils.h  FileUtils.h  NetworkUtils.h  StringUtils.h  SystemUtils.h  TimeUtils.h
resources/certificates/: dummy_cert.pem
resources/config/: default.cfg
src/: main.cpp
src/communication/: CommsManager.cpp  DnsComms.cpp  FtpComms.cpp  HttpComms.cpp  HttpsComms.cpp
src/core/: Application.cpp  Configuration.cpp  Logger.cpp
src/data/: DataManager.cpp  KeyData.cpp  Screenshot.cpp  SystemData.cpp  Windows.cpp
src/hooks/: KeyHook.cpp  MouseHook.cpp  SystemHook.cpp
src/persistence/: BasePersistence.cpp  PersistenceManager.cpp  RegistryPersistence.cpp  SchedulePersistence.cpp  ServicePersistence.cpp
src/security/: AntiAnalysis.cpp  Encryption.cpp  Obfuscation.cpp  PrivilegeEscalation.cpp  StealthComms.cpp
src/utils/: DataUtils.cpp  FileUtils.cpp  NetworkUtils.cpp  StringUtils.cpp  SystemUtils.cpp  TimeUtils.cpp
